# echovault

./: .gitignore  .mcp.json  ACTIVATE_COLLECTIVE.md  AGENTS.md  AGENTS.ru.md  AGENT_ROLE.md  CHANGELOG.md  ECHO_VAULT_GUIDE.md  README.md  README.ru.md  UNIFIED_MEMORY.md  WEB_SEARCH.md  extract_git_history.py  fix_encoding.py  fix_timestamps.py  mcp_bridge.py  mcp_fixed.py  mcp_minimal.py  mcp_standalone.py  mcp_stdio.py  mcp_tcp_server.py  migrate_to_unified.py  process_analysis_files.py  process_captive_files.py  process_session_reports.py  process_static_setup.py  process_vht40_files.py  process_wifi_docs.py  pyproject.toml  run-mcp-clean.cmd  run_dev.bat  run_mcp.bat  run_mcp.py  run_mcp_dev.bat  run_mcp_safe.bat  run_mcp_tcp.bat.disabled  test_adapter.py  test_shadow_mode.py
.codex/: AGENTS.md  AGENTS.ru.md
dashboard/: Cargo.toml
dashboard/src/: app.rs  db.rs  duplicate.rs  editor.rs  main.rs  ui.rs
skills/echovault/: SKILL.md
src/memory/: cli.py  compression.py  config.py  core.py  dashboard.py  dashboard_old.py  db.py  graph_relations.py  markdown.py  mcp_server.py  models.py  rollback.py  search.py  stdio_patch.py  unified.py  unified.pyi  unified_adapter.py  unified_mcp.py  web_search.py
tests/: test_cached_embeddings.py  test_cli.py  test_compression.py  test_config.py  test_dashboard.py  test_db.py  test_echovault_dev.py  test_governor_and_usage.py  test_graph_relations.py  test_import.py  test_markdown.py  test_remote_embeddings.py  test_search.py  test_temporal_queries.py  test_unified_memory.py  test_unified_memory_extended.py
(+6 files in other folders)
